--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-09  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/TagLib/Ogg/GroupedComment.cs: Patch from Bernd Niedergesaess and
+	Andy Beal improving code consistency (BGO #571443)
+
+2009-03-09  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/TagLib/Riff/AviHeaderList.cs: Patch from Bernd Niedergesaess to not
 	use obsolete ctor (BGO #571452)
 
