--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-25  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/TagLib/Ogg/XiphComment.cs: Patch from Helmut Wahrmann adding two
+	fallback options for the album artist getter (BGO #574652)
+
 2009-03-19  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/TagLib/Ape/Tag.cs: Patch from Gregory S. Chudov fixing bug with
