--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2009-05-14  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/TagLib/Aiff/File.cs:
+	* src/TagLib/Aiff/StreamHeader.cs:
+	* src/TagLib/FileTypes.cs:
+	* src/TagLib/TagLib.sources:
+	* src/taglib-sharp.mdp:
+	* docs/Package.en.xml.in:
+	* tests/tests.mdp:
+	* tests/fixtures/TagLib.Tests.FileFormats/AiffFormatTest.cs:
+	* tests/Makefile.am:
+	* taglib-sharp.csproj: Patch from Helmut Wahrmann adding support for the
+	AIFF file format (BGO #579261)
+
 2009-03-25  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/TagLib/Ogg/XiphComment.cs: Patch from Helmut Wahrmann adding two
