--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 2.0.3.4
+Not Yet Released
+
+TagLib# bugs are now tracked at http://bugzilla.gnome.org.
+
+Get releases from http://download.banshee-project.org/taglib-sharp/
+
+Fixes and Features in this release include:
+  * Fix issue with converting/parsing year (bgo#606283)
+  * Support the 'alis' handler code/track type (bgo#584193)
+
+--------------------------------------------------------------------------------
+
 Version 2.0.3.3
 September 30, 2009
 
