--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-23  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* NEWS: Update for 2.0.3.5 release
+
 2010-02-21  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/TagLib/Riff/WaveFormatEx.cs:
