--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 2.0.3.6
+February 24, 2010
+
+TagLib# bugs are now tracked at http://bugzilla.gnome.org.
+
+Fixes and Features in this release include:
+  * Reverse small API break introduced in 2.0.3.5
+
+Contributors to this release:
+  Gabriel Burt
+
+--------------------------------------------------------------------------------
+
 Version 2.0.3.5
 February 23, 2010
 
