--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-03-20  Alexander Kojevnikov <alexander@kojevnikov.com>
 
+	* Makefile.am:
+	* src/Makefile.am: Fix `make distcheck`
+
+2010-03-20  Alexander Kojevnikov <alexander@kojevnikov.com>
+
 	* src/TagLib/File.cs: Make TagLib.File IDisposable
 
 2010-03-20  Alexander Kojevnikov <alexander@kojevnikov.com>
