--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* README: add some real, useful info
+
+2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* configure.ac:
 	* NEWS: Update for 2.0.3.7 release
 
