--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-All that your user has to know goes here
+TagLib# (aka taglib-sharp) is a library for reading and writing
+metadata in media files.  It is API stable, with only API additions
+(not changes or removals) occuring in the 2.0 series.
+
+ * Bugs:     http://bugzilla.gnome.org/browse.cgi?product=taglib-sharp
+ * Tarballs: http://download.banshee-project.org/taglib-sharp/
+ * IRC:      Several TagLib# developers are often in #banshee on irc.gnome.org
+
+TagLib# is free/open source software, released under the LGPL.
+We welcome contributions!  Please try to match our coding style,
+and include unit tests with any patches.  Patches can be submitted
+by filing a bug and attaching the diff to it.
+
+To Build:
+./autogen.sh && make
+
+To Test:
+make test
