2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
	* README: Add svn info

svn path=/trunk/taglib-sharp/; revision=153940

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* README: Add svn info
+
+2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* README: add some real, useful info
 
 2010-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
