Update README with git instructions

--- a/README
+++ b/README
@@ -5,16 +5,16 @@ metadata in media files.  It is API stable, with only API additions
  * Bugs:     http://bugzilla.gnome.org/browse.cgi?product=taglib-sharp
  * Tarballs: http://download.banshee-project.org/taglib-sharp/
  * IRC:      Several TagLib# developers are often in #banshee on irc.gnome.org
- * Svn:      svn://anonsvn.mono-project.com/source/trunk/taglib-sharp
-             http://anonsvn.mono-project.com/viewvc/trunk/taglib-sharp/
+ * Git:      http://github.com/mono/taglib-sharp
+             git://github.com/mono/taglib-sharp.git
 
 TagLib# is free/open source software, released under the LGPL.
 We welcome contributions!  Please try to match our coding style,
 and include unit tests with any patches.  Patches can be submitted
 by filing a bug and attaching the diff to it.
 
-To Build From Subversion:
-svn co svn://anonsvn.mono-project.com/source/trunk/taglib-sharp
+To Build From Git:
+git clone git://github.com/mono/taglib-sharp.git
 cd taglib-sharp
 ./autogen.sh && make
 
