--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,29 @@
-Brian Nickel <brian.nickel@gmail.com>
+Maintainer:
+  Gabriel Burt <gabriel.burt@gmail.com>
+
+Contributors:
+  Aaron Bockover
+  Alexander Kojevnikov
+  Andrés G. Aragoneses
+  Andy Beal
+  Bernd Niedergesaess
+  Bertrand Lorentz
+  Colin Turner
+  Eamon Nerbonne
+  Félix Velasco
+  Gregory S. Chudov
+  Helmut Wahrmann
+  Jeffrey Stedfast
+  Jeroen Asselman
+  John Millikin
+  Julien Moutte
+  Marek Habersack
+  Mike Gemünde
+  Patrick Dehne
+  Paul Lange
+  Ruben Vermeersch
+  Stephane Delcroix
+  Tim Howard
+
+Creator, past maintainer:
+  Brian Nickel <brian.nickel@gmail.com>
