--- a/AUTHORS
+++ b/AUTHORS
@@ -3,16 +3,20 @@ Maintainer:
 
 Contributors:
   Aaron Bockover
+  Alan McGovern
   Alexander Kojevnikov
   Andrés G. Aragoneses
   Andy Beal
+  Anton Drachev
   Bernd Niedergesaess
   Bertrand Lorentz
   Colin Turner
   Eamon Nerbonne
+  Eberhard Beilharz
   Félix Velasco
   Gregory S. Chudov
   Helmut Wahrmann
+  Jakub 'Fiołek' Fijałkowski
   Jeffrey Stedfast
   Jeroen Asselman
   John Millikin
@@ -22,7 +26,9 @@ Contributors:
   Patrick Dehne
   Paul Lange
   Ruben Vermeersch
+  Samuel D. Jack
   Stephane Delcroix
+  Stephen Shaw
   Tim Howard
 
 Creator, past maintainer:
