build: Prepare for 2.1.0.0 release

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Contributors:
   Eberhard Beilharz
   Félix Velasco
   Gregory S. Chudov
+  Guy Taylor
   Helmut Wahrmann
   Jakub 'Fiołek' Fijałkowski
   Jeffrey Stedfast
