Add Opus support and tests

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Contributors:
   Jeroen Asselman
   John Millikin
   Julien Moutte
+  Les De Ridder
   Marek Habersack
   Mike Gemünde
   Patrick Dehne
