--- a/README
+++ b/README
@@ -27,3 +27,20 @@ You can also build from MonoDevelop or Visual Studio using taglib-sharp.sln
 
 To Test:
 make test
+
+
+To Test from Visual Studio (Windows):
+ 
+ Using Nunit 3 Test Adapter:
+  1. Go to menu: Tools > Extensions and Updates > Online
+  2. Search: Nunit 3 Test Adapter
+  3. Download and install
+  4. Open from menu: Test > Windows > Test Explorer
+  5. You can run your tests from this panel (not using the "Start" button)
+ 
+ To test some scenarios and take advantage of the debugger:
+  1. Make the "debug" project the Startup project 
+    (Right-click on the project, select: "Set as StartUp Project"
+  2. Just modify the "Program.cs" 
+  3. Hit the "Start" button
+    
