--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Contributors:
   Stephane Delcroix
   Stephen Shaw
   Tim Howard
+  Sebastien Mouy
 
 Creator, past maintainer:
   Brian Nickel <brian.nickel@gmail.com>
