--- a/README
+++ b/README
@@ -32,12 +32,13 @@ You can also build from MonoDevelop or Visual Studio using taglib-sharp.sln
 To Test/Run from Visual Studio (Windows):
  
  Running regression by using Nunit 3 Test Adapter:
-  1. Go to menu: Tools > Extensions and Updates > Online
-  2. Search: Nunit 3 Test Adapter
-  3. Download and install it
-  4. Open from menu: Test > Windows > Test Explorer
-  5. You can run your tests from this panel (*not* using the "Start" button)
-  6. You can debug your tests from this panel: 
+  1. Download and Install Gtk# for Windows from: http://www.mono-project.com/download/#download-win
+  2. In Visual Studio, go to menu: Tools > Extensions and Updates > Online
+  3. Search: Nunit 3 Test Adapter
+  4. Download and install it
+  5. Open from menu: Test > Windows > Test Explorer
+  6. You can run your tests from this panel (*not* using the "Start" button)
+  7. You can debug your tests from this panel: 
      6.1. Double click on a test. Set some breakpoints in the test in the editor panel.
      6.2. right-click on the same test, select "Debug Selected tests". 
 
