Add GtkSharp to packages.config for tests

--- a/README
+++ b/README
@@ -32,7 +32,8 @@ You can also build from MonoDevelop or Visual Studio using taglib-sharp.sln
 To Test/Run from Visual Studio (Windows):
  
  Running regression by using Nunit 3 Test Adapter:
-  1. Download and Install Gtk# for Windows from: http://www.mono-project.com/download/#download-win
+  1. Ensure NuGet packages have been restored
+        See: https://docs.microsoft.com/en-us/nuget/consume-packages/package-restore
   2. In Visual Studio, go to menu: Tools > Extensions and Updates > Online
   3. Search: Nunit 3 Test Adapter
   4. Download and install it
