Add Gitter link

--- a/README
+++ b/README
@@ -49,3 +49,6 @@ To Test/Run from Visual Studio (Windows):
   2. Just modify the "Program.cs" 
   3. Set some breakpoints and hit the "Start" button
     
+Join the chat at https://gitter.im/taglib-sharp/Lobby
+
+Join the chat at https://gitter.im/mono/taglib-sharp
