--- a/README
+++ b/README
@@ -1,6 +1,15 @@
 TagLib# (aka taglib-sharp) is a library for reading and writing
 metadata in media files, including video, audio, and photo formats.
 
+# Chat
+* [![Join the chat at https://gitter.im/mono/taglib-sharp](https://badges.gitter.im/Join%20Chat.svg)](https://gitter.im/mono/taglib-sharp?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)
+
+# Build Status
+
+| Branch | Status |
+|--------|--------|
+| Master |[![Build Status](https://travis-ci.org/mono/taglib-sharp.svg?branch=master)](https://travis-ci.org/mono/taglib-sharp)|
+
 It is API stable, with only API additions (not changes or removals)
 occuring in the 2.0 series.
 
