[Build] Some autotools cleanup. Still very broken

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Maintainer:
-  Gabriel Burt <gabriel.burt@gmail.com>
+  Stephen Shaw
 
 Contributors:
   Aaron Bockover
@@ -36,3 +36,6 @@ Contributors:
 
 Creator, past maintainer:
   Brian Nickel <brian.nickel@gmail.com>
+
+Past maintainers:
+  Gabriel Burt <gabriel.burt@gmail.com>
